--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,215 @@
-                @font-face {
-                    font-family: 'SBAggroB';
-                    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
-                    font-weight: normal;
-                    font-style: normal;
-                }
-                
-                @font-face {
-                    font-family: 'SUIT-Medium';
-                    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
-                    font-weight: normal;
-                    font-style: normal;
-                }
-                
-                @font-face {
-                    font-family: 'Goyang';
-                    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Goyang.woff') format('woff');
-                    font-weight: normal;
-                    font-style: normal;
-                }
-                
-                * {
-                    margin: 0;
-                    padding: 0;
-                    border: 0;
-                    box-sizing: border-box;
-                }
-                
-                body {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    align-items: center;
-                    height: 100vh;
-                    text-align: center;
-                    width: 100%
-                }
-                
-                .header {
-                    width: 100%;
-                    text-align: center;
-                    padding: 1rem;
-                    background: linear-gradient(-45deg, #c181c4, #588bcf);
-                    color: #fff;
-                    font-size: 1.2rem;
-                    letter-spacing: 2px;
-                    font-family: 'SUIT-Medium';
-                    ;
-                }
-                /* 프로그래스 바 */
-                
-                .progress {
-                    margin: 2px auto;
-                    padding: 2px;
-                    width: 100%;
-                    max-width: 100%;
-                    border: 1px solid #fff;
-                    height: 20px;
-                    background: #e9e9e9
-                }
-                
-                .progress .progress__bar {
-                    height: 100%;
-                    width: 100%;
-                }
-                
-                .animation {
-                    animation: fill-bar 120s infinite;
-                }
-                
-                @keyframes fill-bar {
-                    0% {
-                        width: 100%;
-                        background-color: #588bcf;
-                    }
-                    20% {
-                        background-color: #9d0ca5;
-                    }
-                    50% {
-                        background-color: rgb(255, 208, 0);
-                    }
-                    70% {
-                        background-color: rgb(255, 115, 0);
-                    }
-                    100% {
-                        width: 0%;
-                        background-color: #ff0000;
-                    }
-                }
-                /* 게임 플레이 존 */
-                
-                .section {
-                    min-width: 80%;
-                    width: 90%;
-                }
-                
-                .word-display {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    min-width: 80%;
-                    margin-top: 5rem;
-                    font-size: 2rem;
-                    letter-spacing: -0.5px;
-                    word-break: keep-all;
-                    color: #9d0ca5;
-                    font-family: 'SUIT-Medium';
-                    min-height: 120px;
-                }
-                
-                .word-input-box {
-                    margin-top: 4rem;
-                    min-width: 98%;
-                }
-                
-                .word-input {
-                    width: 100%;
-                    min-height: 30px;
-                    padding: 0.5rem;
-                    border-radius: 5px;
-                    border: 1px solid #c181c4;
-                    font-size: 1.3rem;
-                }
-                
-                .game-info {
-                    margin: 1rem auto 0;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    width: 100%
-                }
-                
-                .game-info>div {
-                    font-size: 1.2rem;
-                    font-weight: 400;
-                    letter-spacing: -1px;
-                    width: 50%;
-                }
-                
-                .game-info>div span {
-                    font-weight: bold;
-                    font-size: 1.6rem;
-                }
-                
-                .game-info>div:nth-child(1) {
-                    color: #b90d0d;
-                }
-                
-                .game-info>div:nth-child(2) {
-                    color: #588bcf;
-                }
-                
-                .button {
-                    margin-top: 1.5rem;
-                    width: 65%;
-                    padding: 1rem 1.6rem;
-                    border-radius: 5px;
-                    background: #c181c4;
-                    color: #fff;
-                    font-size: 1.2rem;
-                    letter-spacing: 0.5px;
-                    font-family: 'Goyang';
-                    cursor: pointer;
-                }
-                
-                .button02 {
-                    margin-top: 1.5rem;
-                    width: 65%;
-                    padding: 1rem 1.6rem;
-                    border-radius: 5px;
-                    background: #ff406a;
-                    color: #fff;
-                    font-size: 1.2rem;
-                    letter-spacing: 0.5px;
-                    font-family: 'Goyang';
-                    cursor: pointer;
-                }
-                
-                .loading {
-                    color: #929292;
-                    cursor: not-allowed;
-                    background: #eaeaea;
-                    letter-spacing: 2px;
-                    font-weight: bold;
-                }
-                
-                .hidden {
-                    visibility: hidden;
-                }
+@font-face {
+    font-family: "SBAggroB";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "SUIT-Medium";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Goyang";
+    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Goyang.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+:focus-visible {
+    outline: none;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    width: 100%;
+}
+
+.header {
+    width: 100%;
+    text-align: center;
+    padding: 1.5rem 1rem;
+    background: linear-gradient(-45deg, #c181c4, #ff406a);
+    color: #fff;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+    font-family: "SUIT-Medium";
+}
+
+
+/* 프로그래스 바 */
+
+.progress {
+    margin: 1px auto;
+    padding: 2px;
+    width: 100%;
+    max-width: 100%;
+    border: 1px solid #fff;
+    height: 20px;
+    background: #e9e9e9;
+}
+
+.progress .progress__bar {
+    height: 100%;
+    width: 100%;
+}
+
+.animation {
+    animation: fill-bar 120s infinite;
+}
+
+@keyframes fill-bar {
+    0% {
+        width: 100%;
+        background-color: #588bcf;
+    }
+    20% {
+        background-color: #9d0ca5;
+    }
+    50% {
+        background-color: rgb(255, 208, 0);
+    }
+    70% {
+        background-color: rgb(255, 115, 0);
+    }
+    100% {
+        width: 0%;
+        background-color: #ff0000;
+    }
+}
+
+
+/* 게임 플레이 존 */
+
+.section {
+    width: 40%;
+}
+
+.word-display {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 80%;
+    margin-top: 5rem;
+    font-size: 2rem;
+    letter-spacing: -0.5px;
+    word-break: keep-all;
+    color: #9d0ca5;
+    font-family: "SUIT-Medium";
+    min-height: 120px;
+}
+
+.word-input-box {
+    margin-top: 4rem;
+    min-width: 98%;
+}
+
+.word-input {
+    width: 100%;
+    min-height: 30px;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid #c181c4;
+    font-size: 1.3rem;
+}
+
+.game-info {
+    margin: 1rem auto 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.game-info>div {
+    font-size: 1.2rem;
+    font-weight: 400;
+    letter-spacing: -1px;
+    width: 50%;
+}
+
+.game-info>div span {
+    font-weight: bold;
+    font-size: 1.6rem;
+}
+
+.game-info>div:nth-child(1) {
+    color: #b90d0d;
+}
+
+.game-info>div:nth-child(2) {
+    color: #588bcf;
+}
+
+button {
+    width: 25%;
+    margin: 0 10px;
+}
+
+.button {
+    margin-top: 1.5rem;
+    padding: 1rem 1.6rem;
+    border-radius: 5px;
+    background: #c181c4;
+    color: #fff;
+    font-size: 1.2rem;
+    letter-spacing: 0.5px;
+    font-family: "Goyang";
+    cursor: pointer;
+}
+
+.button02 {
+    margin-top: 1.5rem;
+    padding: 1rem 1.6rem;
+    border-radius: 5px;
+    background: #ff406a;
+    color: #fff;
+    font-size: 1.2rem;
+    letter-spacing: 0.5px;
+    font-family: "Goyang";
+    cursor: pointer;
+}
+
+.loading {
+    color: #929292;
+    cursor: not-allowed;
+    background: #eaeaea;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+@media (max-width: 767px) {
+    .section {
+        width: 90%;
+    }
+    .header {
+        font-size: 1rem;
+        padding: 30px 0;
+    }
+    .word-display {
+        margin: 60px 0;
+        font-size: 3rem;
+    }
+    button {
+        width: 65%;
+    }
+}
