--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,10 @@
                     box-sizing: border-box;
                 }
                 
+                 :focus-visible {
+                    outline: none;
+                }
+                
                 body {
                     display: flex;
                     flex-direction: column;
